ProTrackDev/force-app/main/default/objects/TR_Tester__c/TR_Tester__c.object-meta.xml
<CustomObject>
    <label>Tester</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Tester Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Testers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>