ProTrackDev/force-app/main/default/objects/TR_Tester__c/fields/TR_Test_Template__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Template</label>
    <referenceTo>TR_Test_Script__c</referenceTo>
    <relationshipLabel>Test Script Testers</relationshipLabel>
    <relationshipName>Testers</relationshipName>
    <type>Lookup</type>
</CustomField>