ProTrackDev/force-app/main/default/objects/TR_Tester__c/fields/TR_User__c.field-meta.xml
<CustomField>
    <fullName>TR_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Testers</relationshipName>
    <type>Lookup</type>
</CustomField>