ProTrackDev/force-app/main/default/objects/TR_Tester__c/validationRules/PreventFromCreatingTesterUntilApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventFromCreatingTesterUntilApproved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL( TR_Test_Template__r.TR_Approval_Status__c ,&apos;Approved&apos;))
)</errorConditionFormula>
    <errorMessage>You cannot create a Tester record until the related Test Script is in an &quot;Approved&quot; status</errorMessage>
</ValidationRule>